[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/ui/leaderboard_entry.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/icons/ball.png" id="4_ball"]
[ext_resource type="Texture2D" path="res://assets/icons/score.svg" id="5_score"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_edit"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_left = 4
corner_radius_bottom_right = 4

[node name="LeaderboardEntry" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 36)
theme_override_constants/separation = 8
script = ExtResource("1_script")

[node name="RankLabel" type="Label" parent="."]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "#1"
horizontal_alignment = 2

[node name="FlagTexture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(24, 16)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="LocationLabel" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "City"
text_overrun_behavior = 3

[node name="NameLabel" type="Label" parent="."]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Player"
text_overrun_behavior = 3

[node name="NameEdit" type="LineEdit" parent="."]
visible = false
custom_minimum_size = Vector2(250, 32)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.5, 0.5, 0.5, 1)
theme_override_colors/caret_color = Color(0.8, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_edit")
placeholder_text = "Enter your name"
max_length = 20
alignment = 1
virtual_keyboard_enabled = true

[node name="LevelIcon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("4_ball")
expand_mode = 1
stretch_mode = 5

[node name="LevelLabel" type="Label" parent="."]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "1"

[node name="ScoreIcon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("5_score")
expand_mode = 1
stretch_mode = 5

[node name="ScoreLabel" type="Label" parent="."]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "12,500"

[node name="ScreenshotButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(48, 32)
custom_maximum_size = Vector2(48, 32)
layout_mode = 2
size_flags_horizontal = 0
ignore_texture_size = true
stretch_mode = 5

[node name="RightSpacer" type="Control" parent="."]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
